--- a/tasks/base_system.yml
+++ b/tasks/base_system.yml
@@ -6,7 +6,7 @@
       - python3
       - git
       - jq
-      - nfs-utils
+      - nfs-common
       - vim 
       - libcgroup
       - libcgroup-tools
