--- a/project_node.yml
+++ b/project_node.yml
@@ -7,7 +7,7 @@
 
   vars_files:
    - group_vars/system.yml
-   - secret_group_vars/system.vault    
+#   - secret_group_vars/system.vault    
 
   tasks:
     - name: Install packages
