--- a/tasks/base_system.yml
+++ b/tasks/base_system.yml
@@ -86,12 +86,12 @@
     owner: root
     mode: 0755
 
-- name: update pip
+#- name: update pip
 #  become_user: "{{ecc_user}}"
-  pip: 
-    name: pip
-    executable: /usr/local/bin/pip3.8
-    extra_args: --upgrade
+#  pip: 
+#    name: pip
+#    executable: /usr/local/bin/pip3.8
+#    extra_args: --upgrade
 
 - name: pip install wheel
 #  become_user: "{{ecc_user}}"
