--- a/tasks/base_system.yml
+++ b/tasks/base_system.yml
@@ -93,9 +93,9 @@
 #    executable: /usr/local/bin/pip3.8
 #    extra_args: --upgrade
 
-- name: pip install wheel
+#- name: pip install wheel
 #  become_user: "{{ecc_user}}"
-  pip: 
-    name: wheel
-    executable: /usr/local/bin/pip3.8
-    extra_args: --upgrade
+#  pip: 
+#    name: wheel
+#    executable: /usr/local/bin/pip3.8
+#    extra_args: --upgrade
