--- a/tasks/base_packages.yml
+++ b/tasks/base_packages.yml
@@ -16,7 +16,6 @@
         - aspell-en
         - emacs
         - evolution
-        - feh
         - gimp
         - java-common
         - less 
@@ -55,6 +54,17 @@
         dest: /usr/local/bin/
         extra_opts: 
           - --strip-components=1 
+
+    - name: build and install modules 5.0.0
+      ansible.builtin.shell:  |
+        curl -Lo /tmp/modules.tgz https://github.com/cea-hpc/modules/releases/download/v5.0.0/modules-5.0.0.tar.gz
+        mkdir /tmp/modules
+        tar jxvf /tmp/modules.tgz.tgz --strip 1 -C /tmp/modules 
+        cd /tmp/modules
+        ./configure --prefix=/usr/local/  
+        make  
+        make install  
+        rm -rf /tmp/modules*
 
 
 
