--- a/tasks/base_packages.yml
+++ b/tasks/base_packages.yml
@@ -55,6 +55,12 @@
         extra_opts: 
           - --strip-components=1 
 
+    - name: install enviroment module dependencies
+      package:
+        name:
+        - tcl-dev
+
+
     - name: check if modules executable is present
       shell: "which /usr/local/bin/modules"
       register: modules_bin
@@ -63,8 +69,8 @@
     - name: build and install modules 5.0.0
       ansible.builtin.shell:  |
         curl -Lo /tmp/modules.tgz https://github.com/cea-hpc/modules/releases/download/v5.0.0/modules-5.0.0.tar.gz
-        mkdir /tmp/modules
-        tar jxvf /tmp/modules.tgz.tgz --strip 1 -C /tmp/modules 
+        mkdir -p /tmp/modules
+        tar zxvf /tmp/modules.tgz --strip 1 -C /tmp/modules 
         cd /tmp/modules
         ./configure --prefix=/usr/local/  
         make  
