--- a/tasks/base_packages.yml
+++ b/tasks/base_packages.yml
@@ -30,6 +30,8 @@
         - sqlite3
         - curl
         - wget
+        - cmake
+        - autofs
 
 
     - name: Install microsoft packages
@@ -55,28 +57,7 @@
         extra_opts: 
           - --strip-components=1 
 
-    - name: install enviroment module dependencies
-      package:
-        name:
-        - tcl-dev
 
-
-    - name: check if modules executable is present
-      shell: "which /usr/local/bin/modules"
-      register: modules_bin
-      ignore_errors: true
-
-    - name: build and install modules 5.0.0
-      ansible.builtin.shell:  |
-        curl -Lo /tmp/modules.tgz https://github.com/cea-hpc/modules/releases/download/v5.0.0/modules-5.0.0.tar.gz
-        mkdir -p /tmp/modules
-        tar zxvf /tmp/modules.tgz --strip 1 -C /tmp/modules 
-        cd /tmp/modules
-        ./configure 
-        make  
-        make install  
-        rm -rf /tmp/modules*
-      when: modules_bin.rc != 0
 
 
 
