--- a/project_node.yml
+++ b/project_node.yml
@@ -20,25 +20,20 @@
     - name: Create users and groups
       include: tasks/users_groups.yml
       tags: 'users'
-    - name: Install influxdb and grafana
-      include: tasks/influxdb.yml
-      tags: 'influxdb'
+
+    - name: mount nfs points
+      include: tasks/nfs.yml
+      tags: "nfs"
 
     - name: configure autofs
       include: tasks/autofs.yml
-      loop: "{{ storage | dict2items }}"
-      loop_control:
-        loop_var: group
+      tags: autofs
 
-    - name: restart autofs
-      service:
-        name: autofs
-        enabled: yes
-        state: restarted
-
+    - name: setup slurm-client
+      include: tasks/slurm_client.yml
+      tags: slurm-client
 
   roles:
     - geerlingguy.java
     - dj-wasabi.telegraf
-#    - neuro-sysmed.linux-vm
 
