--- a/tasks/base_packages.yml
+++ b/tasks/base_packages.yml
@@ -15,7 +15,6 @@
         - bzip2
         - aspell-en
         - emacs
-        - evolution
         - gimp
         - java-common
         - less 
@@ -31,35 +30,15 @@
         - curl
         - wget
         - cmake
-        - autofs
 
 
     - name: Install microsoft packages
       include_tasks:
         file: microsoft_packages.yml
 
-    - name: check if telegram executable is present
-      shell: "which /usr/local/bin/telegram"
-      register: telegram_bin
-      ignore_errors: true
 
-
-    - name: download telegram
-      get_url:
-        url: https://telegram.org/dl/desktop/linux
-        dest: /tmp/telegram.tar.tar.xz
-      when: telegram_bin.rc != 0
-        
-    - name: Extract telegram into /usr/local/bin
-      ansible.builtin.unarchive:
-        src: /tmp/telegram.tar.tar.xz
-        dest: /usr/local/bin/
-        extra_opts: 
-          - --strip-components=1 
-
-
-
-
-
+    - name: Install lmod
+      include_tasks:
+        file: lmod.yml
       
         
