tweaks to slurm-client and refactoring of autofs

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,7 +10,7 @@ host_key_checking = False
 inventory = hosts
 retry_files_enabled = false
 #ask_vault_pass = true
-vault_password_file = vault_password
+#vault_password_file = vault_password
 stdout_callback = yaml
 
 [ssh_connection]
