--- a/tasks/repos.yml
+++ b/tasks/repos.yml
@@ -13,6 +13,12 @@
         repo: deb [arch=amd64] https://packages.microsoft.com/repos/code stable main
         state: present
     
+
+    - name: Add microsoft prod repo (blobfuse)
+      ansible.builtin.apt_repository:
+        repo: deb [arch=amd64] https://packages.microsoft.com/ubuntu/20.04/prod/ focal main
+        state: present
+
     - name: Azure-cli repository
       ansible.builtin.apt_repository:
         repo: deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli focal main
