--- a/tasks/lmod.yml
+++ b/tasks/lmod.yml
@@ -40,14 +40,14 @@
 
     - name: link bash configfile
       ansible.builtin.file:
-        src: ln -s /usr/local/lmod/lmod/init/profile
+        src: /usr/local/lmod/lmod/init/profile
         dest: /etc/profile.d/lmod.sh
         state: link
       when: modules_bin.rc != 0
 
     - name: link csh configfile
       ansible.builtin.file:
-        src: ln -s /usr/local/Modules/init/profile.csh 
+        src: /usr/local/Modules/init/profile.csh 
         dest: /etc/profile.d/lmod.csh
         state: link
       when: modules_bin.rc != 0
