various stuff for the nsm node

--- a/tasks/base_packages.yml
+++ b/tasks/base_packages.yml
@@ -40,5 +40,9 @@
     - name: Install lmod
       include_tasks:
         file: tasks/lmod.yml
+
+    - name: install singularity
+      include_tasks:
+        file: tasks/singularity.yml
       
         
