--- a/tasks/base_packages.yml
+++ b/tasks/base_packages.yml
@@ -8,6 +8,7 @@
         - python3.8
         - python3-pip
         - python3.8-venv
+        - python3-pymysql
         - git
         - gitk
         - jq
