--- a/tasks/lmod.yml
+++ b/tasks/lmod.yml
@@ -51,9 +51,9 @@
         dest: /etc/profile.d/lmod.sh
         state: link
 
-    - name: link csh configfile
-      ansible.builtin.file:
-        src: /usr/local/Modules/init/profile.csh 
-        dest: /etc/profile.d/lmod.csh
-        state: link
+    # - name: link csh configfile
+    #   ansible.builtin.file:
+    #     src: /usr/local/Modules/init/profile.csh 
+    #     dest: /etc/profile.d/lmod.csh
+    #     state: link
 
