odd slurm path on ubuntu

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 ansible
-#cannot see local installed package!
+#cannot see local installed package as running in local env on localhost.
 PyMySQL
+requests
+influxdb
