--- a/nsm.yml
+++ b/nsm.yml
@@ -49,8 +49,8 @@
       tags: slurm-client
 
     - name: install ecc bits
-      become: true
-      become_user: "{{ecc_user}}"
+#      become: true
+#      become_user: "{{ecc_user}}"
       include: tasks/ecc.yml
       tags: 'ecc'
 
