--- a/tasks/ecc.yml
+++ b/tasks/ecc.yml
@@ -37,12 +37,16 @@
  
 
 - name: Deploy ecc utv config file, will keep local copy if exists!
+  become: true
+  become_user: "{{ecc_user}}"
   template:
     src: templates/ecc/ecc_utv.yaml.j2
     dest: "{{cluster_root}}/etc/ecc_utv.yaml"
     owner: "{{ecc_user}}"
 
 - name: Deploy ecc prod config file, will keep local copy if exists!
+  become: true
+  become_user: "{{ecc_user}}"
   template:
     src: templates/ecc/ecc_preprod.yaml.j2
     dest: "{{cluster_root}}/etc/ecc_preprod.yaml"
@@ -59,7 +63,7 @@
 
 - name: install ecc-playbook in {{ ecc_playbook_root }}
   git:
-    repo: https://github.com/neuromics/ecc-playbook.git
+    repo: https://github.com/neuro-sysmed/ecc-playbook.git
     dest: "{{ ecc_playbook_root }}"
     force: yes
   
