run slurm-client on all slurm heads/nodes

--- a/files/slurm/slurmdbd.conf
+++ b/files/slurm/slurmdbd.conf
@@ -1,12 +1,12 @@
 AuthType=auth/munge
-DbdAddr=localhost
+DbdAddr=ecc-head-ubuntu
 DbdHost=localhost
 LogFile=/var/log/slurm/slurmdbd.log
 PidFile=/var/run/slurmdbd.pid
 SlurmUser=slurm
-StorageHost=localhost
+StorageHost=nsm
 StorageLoc=slurm_acct
+StorageUser=slurm
 StoragePass=slurm
 StoragePort=3306
 StorageType=accounting_storage/mysql
-StorageUser=slurm
