dynamic slurm host config, should make life easier

--- a/files/slurm/slurm.conf
+++ b/files/slurm/slurm.conf
@@ -1,21 +1,21 @@
 AccountingStorageType=accounting_storage/slurmdbd
 AuthType=auth/munge
 ClusterName=nsm
-ControlMachine=ecc-head
+ControlMachine={{ groups['slurmhead'][0] }}
 DefMemPerCPU=1000
 JobAcctGatherType=jobacct_gather/cgroup
 ProctrackType=proctrack/cgroup
 SchedulerType=sched/backfill
 SelectType=select/cons_res
 SelectTypeParameters=CR_Core_Memory
-SlurmctldLogFile=/var/log/slurm/slurmctld.log
 SlurmctldPort=6817
 SlurmdDebug=3
+SlurmctldLogFile=/var/log/slurm/slurmctld.log
 SlurmdLogFile=/var/log/slurm/slurmd.log
-SlurmdPort=6818
 SlurmdSpoolDir=/var/spool/slurm/slurmd
-SlurmUser=slurm
 StateSaveLocation=/var/lib/slurm/slurmctld
+SlurmdPort=6818
+SlurmUser=slurm
 TaskPlugin=task/cgroup
 
 # Nodes Mem+CPU needs to be tweaked to real vm-sizes!
