--- a/tasks/slurm_head.yml
+++ b/tasks/slurm_head.yml
@@ -23,7 +23,7 @@
 
 - name: copy slurm conf
   template: 
-    src: files/slurm/slurm.conf
+    src: templates/slurm/slurm.conf.j2
     dest: /etc/slurm-llnl/slurm.conf
     mode: 0644
     owner: slurm
@@ -32,7 +32,7 @@
 
 - name: copy slurmdbd conf
   template: 
-    src: files/slurm/slurmdbd.conf
+    src: templates/slurm/slurmdbd.conf.j2
     dest: /etc/slurm-llnl/slurmdbd.conf
     mode: 0600
     owner: slurm
