need to restart munge after changing the key

--- a/tasks/slurm_client.yml
+++ b/tasks/slurm_client.yml
@@ -22,7 +22,7 @@
     systemd:
       name: munge
       enabled: true
-      state: started
+      state: restarted
 
   - name: copy cgroup.conf for slurm
     copy:
