--- a/tasks/_autofs.yml
+++ b/tasks/_autofs.yml
@@ -2,13 +2,6 @@
 
   block:
 
-    - name: mkdir /data
-      file:
-        path: /data/
-        state: directory
-        owner: root
-        group: root
-
     - name: set group_name
       set_fact:
         group_name: "{{group['key']}}"
@@ -23,4 +16,7 @@
         src: templates/autofs/auto.project.j2
         dest: /tmp/auto.{{group_name}}
 
+    - name: mkdir dir 
+      ansible.collection.file:
+        
 
