--- a/tasks/autofs.yml
+++ b/tasks/autofs.yml
@@ -5,6 +5,14 @@
     name:
       - autofs
 
+- name: mkdir /data
+  file:
+    path: /data/
+    state: directory
+    owner: root
+    group: root
+
+
 - name: configure autofs
   include: tasks/_autofs.yml
   loop: "{{ storage | dict2items }}"
