--- a/tasks/_autofs.yml
+++ b/tasks/_autofs.yml
@@ -16,12 +16,12 @@
         src: templates/autofs/auto.project.j2
         dest: /tmp/auto.{{group_name}}
 
-    - name: mkdir dir 
+    - name: mkdir /data/{{group_name}}/ directory
       ansible.builtin.file:
         dest: /data/{{group_name}}
         owner: root
         mode: 0755
-        state: dir
+        state: directory
 
         
 
