--- a/tasks/_autofs.yml
+++ b/tasks/_autofs.yml
@@ -22,6 +22,8 @@
         owner: root
         mode: 0755
         state: directory
-
         
-
+    - name: write mountpoints to /data{{group}}/README
+      template:
+        src: templates/autofs/README.j2
+        dest: /data{{group}}/README
